--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>廖坤的个人博客</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+        <link rel="icon" href="images/favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
