--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>没找短视频官方网站</title><link href="js/about.546921e3.js" rel="prefetch"><link href="css/index.601d2ada.css" rel="preload" as="style"><link href="js/chunk-vendors.29ba5222.js" rel="preload" as="script"><link href="js/index.7bb61631.js" rel="preload" as="script"><link href="css/index.601d2ada.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but 没找短视频官方网站 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="js/chunk-vendors.29ba5222.js"></script><script src="js/index.7bb61631.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="icon" href="favicon.ico">
+    <title>后台管理</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      a {
+        color: #7e8c8d;
+        text-decoration: none;
+        -webkit-backface-visibility: hidden;
+      }
+      li {
+        list-style: none;
+      }
+      html{
+        width: 100%;
+        height: 100%;
+      }
+      </style>
+  <link href="static/js/app.js" rel="preload" as="script"><link href="static/js/chunk-elementUI.js" rel="preload" as="script"><link href="static/js/chunk-libs.js" rel="preload" as="script"><link href="static/js/runtime.js" rel="preload" as="script"></head>
+  <body>
+    <noscript>
+      <strong>We're sorry but 后台管理 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <script type="text/javascript" src="static/js/fabric.js"></script>
+    <script type="text/javascript" src="static/js/customiseControls.js"></script>
+    <div id="app"></div>
+  <script type="text/javascript" src="static/js/runtime.js"></script><script type="text/javascript" src="static/js/chunk-elementUI.js"></script><script type="text/javascript" src="static/js/chunk-libs.js"></script><script type="text/javascript" src="static/js/app.js"></script></body>
+</html>
